Fix button alignment: make Continue button flush with confirm password field

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -177,7 +177,8 @@
             max-width: none;
             padding: 0.6rem 0;
             font-size: 0.99rem;
-            height: 2.6rem;
+            align-self: stretch;
+            height: auto;
             display: flex;
             align-items: center;
             justify-content: center;
